--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="robots" content="index, follow">	
 	
 	
-	<link rel="stylesheet" type="text/css" href="style.cssl">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href = "font/tt-travels/stylesheet.css" rel = "stylesheet" type = "text/css" />
 	
 	<body>
