--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			</div>		
 		</div>	
 		<div class ="header">
-			<div class ="header-img" style='background: rgb(255, 255, 255) url("image/headimg.jpg")'></div>	
+			<div class ="header-img" style='background: rgb(255, 255, 255) url("image/headimg.jpg") no-repeat'></div>	
 			<div class ="wrap"><div class ="wrapper"><div class ="wrap-circle"><span class ="wrap-text">Заказать уборку</span></div></div></div>	
 			<div class ="header-text"> 		
 				<h1>Уборка квартир в Киеве<h1> 
